--- a/Projects/01-ArticleMarkup/index.html
+++ b/Projects/01-ArticleMarkup/index.html
@@ -11,42 +11,42 @@
 		<img src="images/aboriginal-australians.jpg" alt="Aboriginal Australians">
 		<p><em>Group of Warriors from the tribes west of Hermannsburg, Central Australia. Photographs of Australian Aborigines, Aborigine’s Friends’ Association, Adeleaide 1936. Image: Ivan Copely</em></p>
 		<ol>
-			<li><a href="#2">Legal and administrative definitions</a></li>
+			<li><a href="#2">Legal and administrative definitions</a>
 				<ol>
 					<li><a href="#3">Definitions from Aboriginal Australians</a></li>
 					<li><a href="#4">Definitions from academia</a></li>
-				</ol>
+				</ol></li>
 			<li><a href="#5">Origins</a></li>
-			<li><a href="#6">Groups of Aboriginal Australians</a></li>
+			<li><a href="#6">Groups of Aboriginal Australians</a>
 				<ol>
 					<li><a href="#7">Names used by Australian Aboriginal people</a></li>
-				</ol>
+				</ol></li>
 		</ol>
 	</header>
 	<Main>
 		<Section>
 			<h2 id="2"> Legal and administrative definitions </h2>
 			<p>The category "Aboriginal Australians" was coined by the British after they began colonising Australia in 1788, to refer collectively to all people they found already inhabiting the continent, and later to the descendants of any of those people. Until the 1980s, the sole legal and administrative criterion for inclusion in this category was race.</p>
-			<p><blockquote>“In the era of colonial and post-colonial government, access to basic human rights depended upon your race. If you were a "full blooded Aboriginal native ... [or] any person apparently having an admixture of Aboriginal blood", a half-caste being the "offspring of an Aboriginal mother and other than Aboriginal father" (but not of an Aboriginal father and other than Aboriginal mother), a "quadroon", or had a "strain" of Aboriginal blood you were forced to live on Reserves or Missions, work for rations, given minimal education, and needed governmental approval to marry, visit relatives or use electrical appliances.”</blockquote></p>
+			<blockquote>“In the era of colonial and post-colonial government, access to basic human rights depended upon your race. If you were a "full blooded Aboriginal native ... [or] any person apparently having an admixture of Aboriginal blood", a half-caste being the "offspring of an Aboriginal mother and other than Aboriginal father" (but not of an Aboriginal father and other than Aboriginal mother), a "quadroon", or had a "strain" of Aboriginal blood you were forced to live on Reserves or Missions, work for rations, given minimal education, and needed governmental approval to marry, visit relatives or use electrical appliances.”</blockquote>
 			<p>The Constitution of Australia, in its original form as of 1901, referred to Aborigines twice but without definition. Section 51(xxvi) gave the Commonwealth parliament power to legislate with respect to "the people of any race" throughout the Commonwealth, except for people of "the aboriginal race". The purpose of this provision was to give the Commonwealth power to regulate non-white immigrant workers, who would follow work opportunities interstate. The only other reference, Section 127, provided simply that "aboriginal natives shall not be counted" in reckoning the size of the population of the Commonwealth or any part of it.</p>
 			<p>After both of these references were removed by the 1967 referendum, there was no longer any reference to Aboriginal peoples in the Australian Constitution. Since that time, there have been a number of proposals to amend the constitution to specifically mention Indigenous Australians.
 			</p>
 			<img src="images/aboriginal-dwellings.jpg" alt="Aboriginal Dwellings">
 			<p><em>Aboriginal dwellings in Hermannsburg, Northern Territory, 1923. Image: Herbert Basedow.</em></p>
 			<p>The change to Section 51(xxvi) gave the Commonwealth parliament the power to make laws specifically with respect to Aboriginal peoples as a "race". In the Tasmanian Dam Case of 1983, the High Court of Australia was asked to determine whether Commonwealth legislation whose application could relate to Aboriginal people—parts of the World Heritage Properties Conservation Act 1983 (Cth) as well as related legislation—was supported by Section 51(xxvi) in its new form. The case concerned an application of that legislation that would preserve cultural heritage of Aboriginal Tasmanians. It was held that Aboriginal Australians and Torres Strait Islanders, together or separately, and any part of either, could be regarded as a "race" for this purpose. As to the criteria for identifying a person as a member of such a "race", the definition by Justice Deane has become accepted as current law. Deane J said:</p>
-			<p><blockquote>“It is unnecessary, for the purposes of the present case, to consider the meaning to be given to the phrase "people of any race" in s. 51(xxvi). Plainly, the words have a wide and non-technical meaning [...]. The phrase is, in my view, apposite to refer to all Australian Aboriginals collectively. Any doubt, which might otherwise exist in that regard, is removed by reference to the wording of par. (xxvi) in its original form. The phrase is also apposite to refer to any identifiable racial sub-group among Australian Aboriginals. By "Australian Aboriginal" I mean, in accordance with what I understand to be the conventional meaning of that term, a person of Aboriginal descent, albeit mixed, who identifies himself as such and who is recognised by the Aboriginal community as an Aboriginal.”</blockquote></p>
+			<blockquote>“It is unnecessary, for the purposes of the present case, to consider the meaning to be given to the phrase "people of any race" in s. 51(xxvi). Plainly, the words have a wide and non-technical meaning [...]. The phrase is, in my view, apposite to refer to all Australian Aboriginals collectively. Any doubt, which might otherwise exist in that regard, is removed by reference to the wording of par. (xxvi) in its original form. The phrase is also apposite to refer to any identifiable racial sub-group among Australian Aboriginals. By "Australian Aboriginal" I mean, in accordance with what I understand to be the conventional meaning of that term, a person of Aboriginal descent, albeit mixed, who identifies himself as such and who is recognised by the Aboriginal community as an Aboriginal.”</blockquote>
 			<p>While Deane's three-part definition reaches beyond the biological criterion, it has been criticised as continuing to accept the biological criterion as primary. It has been found difficult to apply, both in each of its parts and as to the relations among the parts; biological "descent" has been a fall-back criterion.</p>
 
 			<h3 id="3">Definitions from Aboriginal Australians</h3>
 			<p>Eve Fesl, a Gabi Gabi woman, wrote in the Aboriginal Law Bulletin describing how she and possibly other Aboriginal people preferred to be identified:</p>
-			<p><blockquote>“The word 'aborigine' refers to an indigenous person of any country. If it is to be used to refer to us as a specific group of people, it should be spelt with a capital 'A', i.e. 'Aborigine’.</blockquote></p>
+			<blockquote>“The word 'aborigine' refers to an indigenous person of any country. If it is to be used to refer to us as a specific group of people, it should be spelt with a capital 'A', i.e. 'Aborigine’.</blockquote>
 			<p>While the term 'indigenous' is being more commonly used by Australian Government and non-Government organisations to describe Aboriginal Australians, Lowitja O'Donoghue, commenting on the prospect of possible amendments to Australia's constitution, was reported as saying:</p>
-			<p><blockquote>“I really can't tell you of a time when 'indigenous' became current, but I personally have an objection to it, and so do many other Aboriginal and Torres Strait Islander people. [...] This has just really crept up on us ... like thieves in the night. [...] We are very happy with our involvement with indigenous people around the world, on the international forum [...] because they're our brothers and sisters. But we do object to it being used here in Australia.”</blockquote></p>
+			<blockquote>“I really can't tell you of a time when 'indigenous' became current, but I personally have an objection to it, and so do many other Aboriginal and Torres Strait Islander people. [...] This has just really crept up on us ... like thieves in the night. [...] We are very happy with our involvement with indigenous people around the world, on the international forum [...] because they're our brothers and sisters. But we do object to it being used here in Australia.”</blockquote>
 			<p>O'Donoghue went on to say that the term indigenous robbed the traditional owners of Australia of an identity because some non-Aboriginal people now wanted to refer to themselves as indigenous because they were born there.</p>
 
 			<h3 id="4">Definitions from academia</h3>
 			<p>Dean of Indigenous Research and Education at Charles Darwin University, Professor MaryAnn Bin-Sallik, has publicly lectured on the ways Aboriginal Australians have been categorized and labelled over time. Her lecture offered a new perspective on the terms urban, traditional and of Indigenous descent as used to define and categorise Aboriginal Australians. She said:</p>
-			<p><blockquote>“Not only are these categories inappropriate, they serve to divide us. [...] Government's insistence on categorising us with modern words like 'urban', 'traditional' and 'of Aboriginal descent' are really only replacing old terms 'half-caste' and 'full-blood' – based on our colouring.”</blockquote></p>
+			<blockquote>“Not only are these categories inappropriate, they serve to divide us. [...] Government's insistence on categorising us with modern words like 'urban', 'traditional' and 'of Aboriginal descent' are really only replacing old terms 'half-caste' and 'full-blood' – based on our colouring.”</blockquote>
 			<p>She called for a replacement of this terminology by that of "Aborigine" or "Torres Strait Islander"—"irrespective of hue".</p>
 		</Section>
 
