--- a/Projects/02-ArticleStyle/index.html
+++ b/Projects/02-ArticleStyle/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Aboriginal Australians</title>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:800,400,300' rel='stylesheet' type='text/css'>
 	<link href="css/master.css" rel="stylesheet" media="all">
 
 </head>
@@ -11,22 +12,25 @@
 		<h1>Aboriginal Australians</h1>
 		<h4>From Wikipedia, the free encyclopedia</h4>
 		<figure>
-			<img src="images/aboriginal-australians.jpg" alt="Aboriginal Australians" style="height:350px; width:auto">
+			<img class="aboriginals" src="images/aboriginal-australians.jpg" alt="Aboriginal Australians">
 			<figcaption>Group of Warriors from the tribes west of Hermannsburg, Central Australia. Photographs of Australian Aborigines, Aborigine’s Friends’ Association, Adeleaide 1936. Image: Ivan Copely
 			</figcaption>
 		</figure>
-		<ol>
-			<li><a href="#2">Legal and administrative definitions</a>
-				<ol>
-					<li><a href="#3">Definitions from Aboriginal Australians</a></li>
-					<li><a href="#4">Definitions from academia</a></li>
-				</ol></li>
-			<li><a href="#5">Origins</a></li>
-			<li><a href="#6">Groups of Aboriginal Australians</a>
-				<ol>
-					<li><a href="#7">Names used by Australian Aboriginal people</a></li>
-				</ol></li>
-		</ol>
+		<nav>
+			<h5 class="navtitle">CONTENTS</h5>
+			<ol>
+				<li><a href="#2">Legal and administrative definitions</a>
+					<ol>
+						<li><a href="#3">Definitions from Aboriginal Australians</a></li>
+						<li><a href="#4">Definitions from academia</a></li>
+					</ol></li>
+				<li><a href="#5">Origins</a></li>
+				<li><a href="#6">Groups of Aboriginal Australians</a>
+					<ol>
+						<li><a href="#7">Names used by Australian Aboriginal people</a></li>
+					</ol></li>
+			</ol>
+		</nav>
 	</header>
 	<Main>
 		<Section>
@@ -36,11 +40,6 @@
 			<p>The Constitution of Australia, in its original form as of 1901, referred to Aborigines twice but without definition. Section 51(xxvi) gave the Commonwealth parliament power to legislate with respect to "the people of any race" throughout the Commonwealth, except for people of "the aboriginal race". The purpose of this provision was to give the Commonwealth power to regulate non-white immigrant workers, who would follow work opportunities interstate. The only other reference, Section 127, provided simply that "aboriginal natives shall not be counted" in reckoning the size of the population of the Commonwealth or any part of it.</p>
 			<p>After both of these references were removed by the 1967 referendum, there was no longer any reference to Aboriginal peoples in the Australian Constitution. Since that time, there have been a number of proposals to amend the constitution to specifically mention Indigenous Australians.
 			</p>
-			<figure>
-				<img src="images/aboriginal-dwellings.jpg" alt="Aboriginal Dwellings">
-				<figcaption>Aboriginal dwellings in Hermannsburg, Northern Territory, 1923. Image: Herbert Basedow.
-				</figcaption>
-			</figure>
 			<p>The change to Section 51(xxvi) gave the Commonwealth parliament the power to make laws specifically with respect to Aboriginal peoples as a "race". In the Tasmanian Dam Case of 1983, the High Court of Australia was asked to determine whether Commonwealth legislation whose application could relate to Aboriginal people—parts of the World Heritage Properties Conservation Act 1983 (Cth) as well as related legislation—was supported by Section 51(xxvi) in its new form. The case concerned an application of that legislation that would preserve cultural heritage of Aboriginal Tasmanians. It was held that Aboriginal Australians and Torres Strait Islanders, together or separately, and any part of either, could be regarded as a "race" for this purpose. As to the criteria for identifying a person as a member of such a "race", the definition by Justice Deane has become accepted as current law. Deane J said:</p>
 			<blockquote>“It is unnecessary, for the purposes of the present case, to consider the meaning to be given to the phrase "people of any race" in s. 51(xxvi). Plainly, the words have a wide and non-technical meaning [...]. The phrase is, in my view, apposite to refer to all Australian Aboriginals collectively. Any doubt, which might otherwise exist in that regard, is removed by reference to the wording of par. (xxvi) in its original form. The phrase is also apposite to refer to any identifiable racial sub-group among Australian Aboriginals. By "Australian Aboriginal" I mean, in accordance with what I understand to be the conventional meaning of that term, a person of Aboriginal descent, albeit mixed, who identifies himself as such and who is recognised by the Aboriginal community as an Aboriginal.”</blockquote>
 			<p>While Deane's three-part definition reaches beyond the biological criterion, it has been criticised as continuing to accept the biological criterion as primary. It has been found difficult to apply, both in each of its parts and as to the relations among the parts; biological "descent" has been a fall-back criterion.</p>
@@ -69,6 +68,11 @@
 			<p>Dispersing across the Australian continent over time, the ancient peoples expanded and differentiated into hundreds of distinct groups, each with its own language and culture. More than 400 distinct Australian Aboriginal peoples have been identified across the continent, distinguished by unique names designating their ancestral languages, dialects, or distinctive speech patterns. Historically, these groups lived in three main cultural areas, known as the Northern, Southern, and Central cultural areas. The Northern and Southern areas, having richer natural marine and woodland resources, were more densely populated than the less resource-rich Central area.</p>
 			<h3 id="7">Names used by Australian Aboriginal people</h3>
 			<p>There are a number of other names from Australian Aboriginal languages commonly used to identify groups based on geography, including:</p>
+			<figure class="hut">
+				<img src="images/aboriginal-dwellings.jpg" alt="Aboriginal Dwellings">
+				<div class="huttext">Aboriginal dwellings in Hermannsburg, Northern Territory, 1923. Image: Herbert Basedow.
+				</div>
+			</figure>
 			<ul>
 				<li>Anangu in northern South Australia, and neighbouring parts of Western Australia and Northern Territory</li>
 				<li>Bama in north-east Queensland</li>
