--- a/Projects/02-ArticleStyle/index.html
+++ b/Projects/02-ArticleStyle/index.html
@@ -32,8 +32,8 @@
 			</ol>
 		</nav>
 	</header>
-	<Main>
-		<Section>
+	<main>
+		<section>
 			<h2 id="2"> Legal and administrative definitions </h2>
 			<p>The category "Aboriginal Australians" was coined by the British after they began colonising Australia in 1788, to refer collectively to all people they found already inhabiting the continent, and later to the descendants of any of those people. Until the 1980s, the sole legal and administrative criterion for inclusion in this category was race.</p>
 			<blockquote>“In the era of colonial and post-colonial government, access to basic human rights depended upon your race. If you were a "full blooded Aboriginal native ... [or] any person apparently having an admixture of Aboriginal blood", a half-caste being the "offspring of an Aboriginal mother and other than Aboriginal father" (but not of an Aboriginal father and other than Aboriginal mother), a "quadroon", or had a "strain" of Aboriginal blood you were forced to live on Reserves or Missions, work for rations, given minimal education, and needed governmental approval to marry, visit relatives or use electrical appliances.”</blockquote>
@@ -55,15 +55,15 @@
 			<p>Dean of Indigenous Research and Education at Charles Darwin University, Professor MaryAnn Bin-Sallik, has publicly lectured on the ways Aboriginal Australians have been categorized and labelled over time. Her lecture offered a new perspective on the terms urban, traditional and of Indigenous descent as used to define and categorise Aboriginal Australians. She said:</p>
 			<blockquote>“Not only are these categories inappropriate, they serve to divide us. [...] Government's insistence on categorising us with modern words like 'urban', 'traditional' and 'of Aboriginal descent' are really only replacing old terms 'half-caste' and 'full-blood' – based on our colouring.”</blockquote>
 			<p>She called for a replacement of this terminology by that of "Aborigine" or "Torres Strait Islander"—"irrespective of hue".</p>
-		</Section>
+		</section>
 
-		<Section>
+		<section>
 			<h2 id="5">Origins</h2>
 			<p>The origin of Aboriginal peoples in Australia has been the subject of intense speculation since the nineteenth century. Until recently, no theory of migration had gained wide acceptance. Genetic studies had shown the Aboriginal peoples to be related much more closely to each other than to any peoples outside Australia, but scholars had disagreed whether their closest kin outside Australia were certain South Asian groups or African groups. The latter would imply a migration pattern in which their ancestors passed through South Asia to Australia without intermingling genetically with other populations along the way. A 2009 genetic study in India found similarities among Indian archaic populations and Aboriginal people, indicating a Southern migration route, with expanding populations from Southeast Asia migrating to Indonesia and Australia.</p>
 			<p>In a genetic study in 2011, researchers found evidence, in DNA samples taken from strands of Aboriginal people's hair, that the ancestors of the Aboriginal population split off from the ancestors of the European and Asian populations between 62,000 and 75,000 years ago—roughly 24,000 years before the European and Asian populations split off from each other. These Aboriginal ancestors migrated into South Asia and then into Australia, where they stayed, with the result that, outside of Africa, the Aboriginal peoples have occupied the same territory continuously longer than any other human populations. These findings suggest that modern Aboriginal peoples are the direct descendants of migrants who arrived around 50,000 years ago. This finding is supported by earlier archaeological finds of human remains near Lake Mungo that date to 45,000 years ago. The same genetic study of 2011 found evidence that Aboriginal peoples carry some of the genes associated with the Denisovan peoples of Asia; the study suggests that there is an increase in allele sharing between the Denisovans and the Aboriginal Australians genome compared to other Eurasians and Africans. The Papuans have more sharing alleles than Aboriginal peoples. The data suggests that modern and archaic humans interbred in Asia before the migration to Australia.</p>
-		</Section>
+		</section>
 
-		<Section>
+		<section>
 			<h2 id="6">Groups of Aboriginal Australians</h2>
 			<p>Dispersing across the Australian continent over time, the ancient peoples expanded and differentiated into hundreds of distinct groups, each with its own language and culture. More than 400 distinct Australian Aboriginal peoples have been identified across the continent, distinguished by unique names designating their ancestral languages, dialects, or distinctive speech patterns. Historically, these groups lived in three main cultural areas, known as the Northern, Southern, and Central cultural areas. The Northern and Southern areas, having richer natural marine and woodland resources, were more densely populated than the less resource-rich Central area.</p>
 			<h3 id="7">Names used by Australian Aboriginal people</h3>
@@ -82,10 +82,10 @@
 				<li>Nunga in southern South Australia</li>
 				<li>Palawah (or Pallawah) in Tasmania.</li>
 			</ul>
-		</Section>
+		</section>
 
 
-	</Main>
+	</main>
 
 </body>
 </html>
