--- a/Projects/03-CoffeeShop/index.html
+++ b/Projects/03-CoffeeShop/index.html
@@ -8,12 +8,17 @@
 	</head>
 	<body>
 		<header>
-			<img class="large_logo" src="images/logo_large.png" alt="logo image">
-			<h1>Grinders</h1>
+			<div class="smaller">
+				<figure class="large_logo">
+					<img src="images/logo_large.png" alt="logo image">
+				</figure>
+				<h1>Grinders Coffee Co.</h1>
 			<!--<h2>We Are Grinders Coffee Co.</h2>-->
-			<h3>Grinders is where people gather to experience the true spirit of generosity. This is not a term we use lightly, and it’s what keeps our customers coming back for more.</h3>
+				<h3>Grinders is where people gather to experience the true spirit of generosity. This is not a term we use lightly, and it’s what keeps our customers coming back for more.</h3>
+			</div>
 		</header>
-		<section class="coffee-bar">
+		<section class="menu">
+		<section class="coffeebar">
 			<table>
 				<caption>Coffee Bar</caption>
 				<tr>
@@ -30,8 +35,8 @@
 				</tr>
 			</table>
 		</section>
-		<section class="espresso_bar">
-			<table class="espresso_bar">
+		<section class="espressobar">
+			<table>
 				<caption>Espresso Bar</caption>
 				<tr>
 					<td>Espresso</td>
@@ -64,6 +69,7 @@
 					<td>4</td>
 				</tr>
 			</table>
+		</section>
 		</section>
 		<section class="hours_location">
 			<p>Hours & Location</p>
