Finished Coffee Shop

--- a/Projects/03-CoffeeShop/index.html
+++ b/Projects/03-CoffeeShop/index.html
@@ -71,19 +71,39 @@
 			</table>
 		</section>
 		</section>
-		<section class="hours_location">
-			<p>Hours & Location</p>
+		<section class="hourslocation">
+			<div class="interior">
+				<img src="images/location.jpg" alt="interior">
+			</div>
+			<div class="specifics">
+			<p class="hourstitle">Hours & Location</p>
 			<p>Open 7am - 5pm, 7 days a Week</p>
 			<phone>410-509-8010</phone>
 			<address>Grinders Coffee Co.<br>4511 W 31st St.</br>Baltimore, MD 21232</address>
-		</sections>
-		<footer>
-			<div class="subtext">2015 Grinders Coffee Co.</div>
-			<div class="social_links">
-				<p><a href="http:/www.twiter.com/">Twitter</p>
-				<p><a href="http:/www.facebook.com/">Facebook</p>
-				<p><a href="http:/www.instagram.com/">Instagram</p>
+			</div>
+			<div class="directions"><a href="https://www.google.com/maps">Get Directions</a></div>
 
+		</sections>
+		</section>
+
+		<footer>
+		<div class="info">
+			<div>
+				<div class="bottom">
+					<p class="subtext">2015 GRINDERS COFFEE CO.</p>
+				</div>
+				<div class="bottom">
+					<img src="images/logo_small.png" alt="">
+				</div>
+				<div class="bottom">
+					<ul>
+					<li class="social_links"><a href="http:/www.twiter.com/">TWITTER</a></li>
+					<li class="social_links"><a href="http:/www.facebook.com/">FACEBOOK</a></li>
+					<li class="social_links"><a href="http:/www.instagram.com/">INSTAGRAM</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 		</footer>
 	</body>
 </html>
