--- a/Projects/03-CoffeeShop/index.html
+++ b/Projects/03-CoffeeShop/index.html
@@ -2,108 +2,170 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Grinders Coffee Home Page</title>
+
+		<link href="css/normalize.css" rel="stylesheet">
+
+		<link href="css/grid.css" rel="stylesheet">
+
 		<link href="css/master.css" rel="stylesheet" media="all">
+
 		<link href='http://fonts.googleapis.com/css?family=Sanchez:400italic,400' rel='stylesheet' type='text/css'>
+
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+
 	</head>
-	<body>
+	<body class="fs-grid">
+
 		<header>
-			<div class="smaller">
-				<figure class="large_logo">
+
+			<div class="smaller fs-row">
+				<div class="fs-cell fs-lg-10 fs-lg-push-1 fs-xl-8 fs-xl-push-2">
+				<figure class="large_logo class=">
 					<img src="images/logo_large.png" alt="logo image">
 				</figure>
-				<h1>Grinders Coffee Co.</h1>
-			<!--<h2>We Are Grinders Coffee Co.</h2>-->
-				<h3>Grinders is where people gather to experience the true spirit of generosity. This is not a term we use lightly, and it’s what keeps our customers coming back for more.</h3>
+					<h1>Grinders Coffee Co.</h1>
+					<h3>Grinders is where people gather to experience the true spirit of generosity. This is not a term we use lightly, and it’s what keeps our customers coming back for more.</h3>
+				</div>
 			</div>
 		</header>
+
 		<section class="menu">
-		<section class="coffeebar">
-			<table>
-				<caption>Coffee Bar</caption>
-				<tr>
-					<td>Pour-Over Coffee</td>
-					<td>3.5</td>
-					<td>Cold Brew Iced Coffee</td>
-					<td>3.5</td>
-				</tr>
-				<tr>
-					<td>French Press to share</td>
-					<td>7</td>
-					<td>Chemex to share</td>
-					<td>7</td>
-				</tr>
-			</table>
+
+		<section>
+
+			<div class="fs-row">
+				<div class="fs-cell">
+				<h4>Coffee Bar</h4>
+				</div>
+			</div>
+				<div class="fs-row">
+				<div>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4 fs-lg-push-2">Pour-Over Coffee<span class="itemtwo">3.5</span></p>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4">Cold Brew Iced Coffee<span class="itemtwo">3.5</span></p>
+					
+				</div>
+
+				<div>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4 fs-lg-push-2">French Press to share<span class="itemtwo">8</span></p>
+					
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4">Chemex to share<span class="itemtwo">7</span></p>
+
+				</div>
+				</div>
+
 		</section>
-		<section class="espressobar">
-			<table>
-				<caption>Espresso Bar</caption>
-				<tr>
-					<td>Espresso</td>
-					<td>2.5</td>
-					<td>Cappuccino</td>
-					<td>3.75</td>
-				</tr>
-				<tr>
-					<td>Latte</td>
-					<td>4</td>
-					<td>Mocha</td>
-					<td>4.5</td>
-				</tr>
-				<tr>
-					<td>Macchiato</td>
-					<td>3</td>
-					<td>Americano</td>
-					<td>3.5</td>
-				</tr>
-				<tr>
-					<td>Maple Macchiato</td>
-					<td>3.5</td>
-					<td>Honey Macchiato</td>
-					<td>5</td>
-				</tr>
-				<tr>
-					<td>Cajita Latte</td>
-					<td>5</td>
-					<td>Chai</td>
-					<td>4</td>
-				</tr>
-			</table>
+
+		<section>
+
+			<div class="fs-row">
+				<div class="fs-cell">
+				<h4>Espresso Bar</h4>
+				</div>
+			</div>
+			<div class="fs-row">
+				<div>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4 fs-lg-push-2">Espresso<span class="itemtwo">2.5</span></p>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4">Cappuccino<span class="itemtwo">3.75</span></p>
+
+				</div>
+
+				<div>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4 fs-lg-push-2">Latte<span class="itemtwo">4</span></p>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4">Mocha<span class="itemtwo">4.5</span></p>
+
+				</div>
+
+				<div>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4 fs-lg-push-2">Macchiato<span class="itemtwo">3</span></p>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4">Americano<span class="itemtwo">3.5</span></p>
+
+				</div>
+
+				<div>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4 fs-lg-push-2">Maple Macchiato<span class="itemtwo">3.5</span></p>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4">Honey Macchiato<span class="itemtwo">5</span></p>
+
+				</div>
+
+				<div>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4 fs-lg-push-2">Cajita Latte<span class="itemtwo">5</span></p>
+
+					<p class="item fs-cell fs-sm-2 fs-md-3 fs-lg-4">Chai<span class="itemtwo">4</span></p>
+
+				</div>
+			</div>
+
 		</section>
+
 		</section>
+
 		<section class="hourslocation">
-			<div class="interior">
-				<img src="images/location.jpg" alt="interior">
+			<div class="fs-row">
+				<div class="fs-cell fs-sm-3 fs-md-2 fs-md-push-1 fs-lg-4 fs-lg-push-2 fs-xl-3 fs-xl-push-3">
+					<div class="specifics">
+					<div class="hourstitle">Hours & Location</div>
+					<div class="open">Open 7am - 5pm, 7 days a Week</div>
+					<div class="phone">410-509-8010</div>
+					<address>Grinders Coffee Co.<br>4511 W 31st St.</br>Baltimore, MD 21232</address>
+					</div>
+					<div class="directions"><a href="https://www.google.com/maps">Get Directions</a>
+					</div>
+				</div>
+				<div class="fs-cell fs-sm-all fs-md-2 fs-lg-4 interiorphoto">
+					<div>
+					<img src="images/location.jpg" alt="interior">
+					</div>
+				</div>
 			</div>
-			<div class="specifics">
-			<p class="hourstitle">Hours & Location</p>
-			<p>Open 7am - 5pm, 7 days a Week</p>
-			<phone>410-509-8010</phone>
-			<address>Grinders Coffee Co.<br>4511 W 31st St.</br>Baltimore, MD 21232</address>
-			</div>
-			<div class="directions"><a href="https://www.google.com/maps">Get Directions</a></div>
 
 		</sections>
+
 		</section>
 
 		<footer>
-		<div class="info">
-			<div>
-				<div class="bottom">
-					<p class="subtext">2015 GRINDERS COFFEE CO.</p>
+
+			<div class="fs-row info">
+
+				<div>
+
+					<div class="fs-cell fs-md-3 fs-lg-5 fs-xl-4 fs-xl-push-1">
+						<p class="subtext">2015 GRINDERS COFFEE CO.</p>
+					</div>
+
+					<div class="fs-cell fs-lg-2 fs-xl-2 tinylogo">
+						<div>
+						<img src="images/logo_small.png" alt="">
+						</div>
+					</div>
+
+					<div class="fs-cell fs-md-3 fs-lg-5 fs-xl-4 social">
+						<p class="social_links"><a href="http:/www.twiter.com/">TWITTER</a></p>
+						<p class="social_links"><a href="http:/www.facebook.com/">FACEBOOK</a></p>
+						<p class="social_links"><a href="http:/www.instagram.com/">INSTAGRAM</a></p>
+
+					</div>
+
 				</div>
-				<div class="bottom">
-					<img src="images/logo_small.png" alt="">
-				</div>
-				<div class="bottom">
-					<ul>
-					<li class="social_links"><a href="http:/www.twiter.com/">TWITTER</a></li>
-					<li class="social_links"><a href="http:/www.facebook.com/">FACEBOOK</a></li>
-					<li class="social_links"><a href="http:/www.instagram.com/">INSTAGRAM</a></li>
-					</ul>
-				</div>
+
 			</div>
-		</div>
+
 		</footer>
+
+		<script>
+(function(){if(typeof FSGridBookmarklet==='undefined'){document.body.appendChild(document.createElement('script')).src='http://beta.formstone.it/js/bookmarklet/grid.js';}else{FSGridBookmarklet();}})();
+		</script>
+
 	</body>
 </html>
