--- a/Projects/03-CoffeeShop/index.html
+++ b/Projects/03-CoffeeShop/index.html
@@ -9,6 +9,9 @@
 
 		<link href="css/master.css" rel="stylesheet" media="all">
 
+
+		<link href="css/style.css" rel="stylesheet">
+
 		<link href='http://fonts.googleapis.com/css?family=Sanchez:400italic,400' rel='stylesheet' type='text/css'>
 
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
@@ -17,9 +20,10 @@
 	<body class="fs-grid">
 
 		<header>
-
+    		
 			<div class="smaller fs-row">
 				<div class="fs-cell fs-lg-10 fs-lg-push-1 fs-xl-8 fs-xl-push-2">
+
 				<figure class="large_logo class=">
 					<img src="images/logo_large.png" alt="logo image">
 				</figure>
