updates to photo app

--- a/Projects/05-PhotoApp/index.html
+++ b/Projects/05-PhotoApp/index.html
@@ -2,8 +2,99 @@
 <html>
 	<head>
 
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<title>PicticiousPro</title>
+		
+		<link href='http://fonts.googleapis.com/css?family=Roboto:100,300,700|Roboto+Condensed:300' rel='stylesheet' type='text/css'>
+
+		
+		<link href="css/normalize.css" rel="stylesheet">
+		<link href="css/master.css" rel="stylesheet" media="all">
+		<link href="css/grid.css" rel="stylesheet">
+
+
 	</head>
-	<body>
+	<body class="fs-grid">
+		
+				<div class="fs-row logo">
+					<div class"fs-cell fs-md-full fs-lg-full">
+						<div class="company_name"><h1><b>Pictorious</b>Pro</h1></div>
+					</div>
+				</div>
+
+		<header class="header_image">
+			<div class="subheader fs-row">
+				<div class="fs-cell fs-sm-full fs-md-3 fs-lg-6">
+					<h2>NICE SHOT</h2>
+					<p class="niceshottext">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam.</p>
+					<div><a class="download_button" href="#">Download Now</a></div>
+				</div>
+				<div class="cell_containter fs-cell fs-lg-6">
+					<div class="intro_phone"><img src="images/intro_phone.png" alt="phone screen">
+					</div>
+				</div>
+			</div>
+		</header>
+		<div class="options fs-row">
+			<article class="fs-cell fs-sm-full fs-md-4 fs-md-push-1 fs-lg-4 options_specific options_cloud">
+				<h3>Cloud Sync</h3>
+				<p class="features">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum Fuscus dabipus, tellus ac.</p>
+			</article>
+			<article class="fs-cell fs-sm-full fs-md-4 fs-md-push-1 fs-lg-4 options_specific options_map">
+				<h3>Photo Map</h3>
+				<p class="features">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Ligula porta felis nulla non.</p>
+			</article>
+			<article class="fs-cell fs-sm-full fs-md-4 fs-md-push-1 fs-lg-4 options_specific options_life">
+				<h3>Capture Life</h3>
+				<p class="features">Donec ullamcorper nulla non metus auctor fringilla. Maecenas faucibus mollis interdum. Fusce dapibus, tellus ac cursus.</p>
+			</article>
+		</div>
+		<div class="photo_thumbnails">
+		<div class="fs-row">
+			<div class="fs-cell fs-lg-4">
+			<h4>Capture Life</h4>
+			<p class="life_body_copy">Donec ullamcorper nulla non metus auctor fringilla. Maecenas faucibus mollis interdum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+			</div>
+			<div class="fs-cell fs-md-full fs-lg-8">
+				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_01.jpg" alt="sunrise">
+				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_02.jpg" alt="sunrise">
+				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_03.jpg" alt="sunrise">
+				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_04.jpg" alt="sunrise">
+				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_05.jpg" alt="sunrise">
+				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_06.jpg" alt="sunrise">
+				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_07.jpg" alt="sunrise">
+				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_08.jpg" alt="sunrise">
+			</div>
+			</div>
+		</div>
+
+		<div class="purchase fs-row">
+			<h5 class="fs-cell fs-lg-full">Download Now</h5>
+			<p class="fs-cell fs-lg-full download_body_copy">Nullam id dolor id nibh ultricies vehicula deposit quid pro quo hic escorol. </p>
+			<p class="download">
+			<a href="#" class="download_devices download_apple">apple</a>
+			<a href="#" class="download_devices download_google">google</a>
+			<a href="#" class="download_devices download_amazon">amazon</a>
+			</p>
+		</div>
+
+		<footer class="fs-row">
+			<div class="fs-cell fs-lg-full footer_box">
+				<p class="legal">
+				<a href="#" class="support">Support</a>
+				<a href="#" class="privacy">Privacy & Terms</a>
+				<a href="#" class="copyright">&copy; 2014 PicticiousPro</a></div>
+				</p>
+			</div>
+			
+		</footer>
+
+
+		<script>
+			(function(){if(typeof FSGridBookmarklet==='undefined'){document.body.appendChild(document.createElement('script')).src=‘https://formstone.it/js/bookmarklet/grid.js';}else{FSGridBookmarklet();}})();
+		</script>
 
 	</body>
 </html>
