Photo App with Carousel

--- a/Projects/05-PhotoApp/index.html
+++ b/Projects/05-PhotoApp/index.html
@@ -58,15 +58,15 @@
 			<h4>Capture Life</h4>
 			<p class="life_body_copy">Donec ullamcorper nulla non metus auctor fringilla. Maecenas faucibus mollis interdum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 			</div>
-			<div class="fs-cell fs-md-full fs-lg-8">
-				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_01.jpg" alt="sunrise">
-				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_02.jpg" alt="sunrise">
-				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_03.jpg" alt="sunrise">
-				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_04.jpg" alt="sunrise">
-				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_05.jpg" alt="sunrise">
-				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_06.jpg" alt="sunrise">
-				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_07.jpg" alt="sunrise">
-				<img class="fs-cell fs-sm-half fs-md-fourth fs-lg-fourth" src="images/photos/thumb_08.jpg" alt="sunrise">
+			<div class="photo_carousel fs-cell fs-md-full fs-lg-8">
+				<div><img class="slideshow" src="images/photos/thumb_01.jpg" alt="sunrise"></div>
+				<div><img class="slideshow" src="images/photos/thumb_02.jpg" alt="sunrise"></div>
+				<div><img class="slideshow" src="images/photos/thumb_03.jpg" alt="sunrise"></div>
+				<div><img class="slideshow" src="images/photos/thumb_04.jpg" alt="sunrise"></div>
+				<div><img class="slideshow" src="images/photos/thumb_05.jpg" alt="sunrise"></div>
+				<div><img class="slideshow" src="images/photos/thumb_06.jpg" alt="sunrise"></div>
+				<div><img class="slideshow" src="images/photos/thumb_07.jpg" alt="sunrise"></div>
+				<div><img class="slideshow" src="images/photos/thumb_08.jpg" alt="sunrise"></div>
 			</div>
 			</div>
 		</div>
@@ -102,10 +102,12 @@
 			
 		</footer>
 
-		<script src="js/carousel.js"></script>
+		<script src="js/jquery-1.11.2.min.js"></script>
 		<script src="js/core.js"></script>
+		<script src="js/carousel.js"></script>
 		<script src="js/mediaquery.js"></script>
 		<script src="js/touch.js"></script>
+		<script src="js/master.js"></script>
 
 		<script>
 			(function(){if(typeof FSGridBookmarklet==='undefined'){document.body.appendChild(document.createElement('script')).src=‘https://formstone.it/js/bookmarklet/grid.js';}else{FSGridBookmarklet();}})();
