--- a/Projects/05-PhotoApp/index.html
+++ b/Projects/05-PhotoApp/index.html
@@ -13,7 +13,10 @@
 		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/master.css" rel="stylesheet" media="all">
 		<link href="css/grid.css" rel="stylesheet">
+		<link href="css/animate.css" rel="stylesheet">
 		<link href="css/carousel.css" rel="stylesheet">
+		<link href="css/lightbox.css" rel="stylesheet">
+		<script src="js/wow.min.js"></script>
 
 
 	</head>
@@ -28,8 +31,8 @@
 		<header class="header_image">
 			<div class="subheader fs-row">
 				<div class="fs-cell fs-sm-full fs-md-3 fs-lg-6">
-					<h2>NICE SHOT</h2>
-					<p class="niceshottext">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam.</p>
+					<h2 class="wow animated fadeInUp">NICE SHOT</h2>
+					<p class="niceshottext wow animated fadeInUp" data-wow-delay=".2s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam.</p>
 					<div><a class="download_button" href="#">Download Now</a></div>
 				</div>
 				
@@ -55,21 +58,36 @@
 		<div class="photo_thumbnails">
 		<div class="fs-row">
 			<div class="fs-cell fs-lg-4">
-			<h4>Capture Life</h4>
+			<h4 class="wow animated fadeInUp">Capture Life</h4>
 			<p class="life_body_copy">Donec ullamcorper nulla non metus auctor fringilla. Maecenas faucibus mollis interdum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 			</div>
-			<div class="photo_carousel fs-cell fs-md-full fs-lg-8">
-				<div><img class="slideshow" src="images/photos/thumb_01.jpg" alt="sunrise"></div>
-				<div><img class="slideshow" src="images/photos/thumb_02.jpg" alt="sunrise"></div>
-				<div><img class="slideshow" src="images/photos/thumb_03.jpg" alt="sunrise"></div>
-				<div><img class="slideshow" src="images/photos/thumb_04.jpg" alt="sunrise"></div>
-				<div><img class="slideshow" src="images/photos/thumb_05.jpg" alt="sunrise"></div>
-				<div><img class="slideshow" src="images/photos/thumb_06.jpg" alt="sunrise"></div>
-				<div><img class="slideshow" src="images/photos/thumb_07.jpg" alt="sunrise"></div>
-				<div><img class="slideshow" src="images/photos/thumb_08.jpg" alt="sunrise"></div>
+			<div class="photo_carousel fs-cell fs-md-full fs-lg-8 js-carousel">
+				<div><a href="https://vimeo.com/105101700" class="js-lightbox" data-lightbox-gallery="gallery"> <img class="slideshow" src="images/photos/thumb_01.jpg" alt="sunrise"></a></div>
+				<div><a href="images/photos/thumb_01.jpg" class="js-lightbox" data-lightbox-gallery="gallery"><img class="slideshow" src="images/photos/thumb_02.jpg" alt="sunrise"></a></div>
+				<div><a href="images/photos/thumb_01.jpg" class="js-lightbox" data-lightbox-gallery="gallery"><img class="slideshow" src="images/photos/thumb_03.jpg" alt="sunrise"></a></div>
+				<div><a href="images/photos/thumb_01.jpg" class="js-lightbox" data-lightbox-gallery="gallery"><img class="slideshow" src="images/photos/thumb_04.jpg" alt="sunrise"></a></div>
+				<div><a href="images/photos/thumb_01.jpg" class="js-lightbox" data-lightbox-gallery="gallery"><img class="slideshow" src="images/photos/thumb_05.jpg" alt="sunrise"></a></div>
+				<div><a href="images/photos/thumb_01.jpg" class="js-lightbox" data-lightbox-gallery="gallery"><img class="slideshow" src="images/photos/thumb_06.jpg" alt="sunrise"></a></div>
+				<div><a href="images/photos/thumb_01.jpg" class="js-lightbox" data-lightbox-gallery="gallery"><img class="slideshow" src="images/photos/thumb_07.jpg" alt="sunrise"></a></div>
+				<div><a href="images/photos/thumb_01.jpg" class="js-lightbox" data-lightbox-gallery="gallery"><img class="slideshow" src="images/photos/thumb_08.jpg" alt="sunrise"></a></div>
 			</div>
+			</div>
+		
+
+		<div class="fs-row">
+			<div class="photo_carousel_two fs-cell-right fs-md-full fs-lg-8 js-carousel">
+				<div><img class="slideshow_thumbnail" src="images/photos/thumb_01.jpg" alt="sunrise"></div>
+				<div><img class="slideshow_thumbnail" src="images/photos/thumb_02.jpg" alt="sunrise"></div>
+				<div><img class="slideshow_thumbnail" src="images/photos/thumb_03.jpg" alt="sunrise"></div>
+				<div><img class="slideshow_thumbnail" src="images/photos/thumb_04.jpg" alt="sunrise"></div>
+				<div><img class="slideshow_thumbnail" src="images/photos/thumb_05.jpg" alt="sunrise"></div>
+				<div><img class="slideshow_thumbnail" src="images/photos/thumb_06.jpg" alt="sunrise"></div>
+				<div><img class="slideshow_thumbnail" src="images/photos/thumb_07.jpg" alt="sunrise"></div>
+				<div><img class="slideshow_thumbnail" src="images/photos/thumb_08.jpg" alt="sunrise"></div>
 			</div>
 		</div>
+		</div>
+
 
 		<div class="purchase fs-row">
 			<h5 class="fs-cell fs-lg-full">Download Now</h5>
@@ -108,6 +126,9 @@
 		<script src="js/mediaquery.js"></script>
 		<script src="js/touch.js"></script>
 		<script src="js/master.js"></script>
+		<script src="js/transition.js"></script>
+		<script src="js/lightbox.js"></script>
+
 
 		<script>
 			(function(){if(typeof FSGridBookmarklet==='undefined'){document.body.appendChild(document.createElement('script')).src=‘https://formstone.it/js/bookmarklet/grid.js';}else{FSGridBookmarklet();}})();
